Refactor adding geo and fix tweets.go
Mainly refactor geo.go out and start working on distributed version.
Fix tweets.go to start using my version that has locations parameter.

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@ function initialize() {
       var title = '@' + t.user.screen_name + ':' + t.text;
       var myLatlng = new google.maps.LatLng(lat, lon);
       var marker = new google.maps.Marker({
-        animation: google.maps.Animation.DROP,
+        //animation: google.maps.Animation.DROP,
         position: myLatlng,
         map: map,
         title:title
