Add path to parameters of header generator

--- a/header.html
+++ b/header.html
@@ -72,7 +72,7 @@ function initialize() {
     var data = {'box': bs};
 
     $.ajax({
-      url: '/api/search',
+      url: '{{.Path}}/api/search',
       data: data,
       success: handleResults,
       error: handleError,
