--- a/header.html
+++ b/header.html
@@ -13,8 +13,9 @@ function initialize() {
     mapTypeId: google.maps.MapTypeId.ROADMAP
   };
   var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-  function handleError(e) {
-    console.log('Error retrieving search results');
+  function handleError(e, statusText, errorString) {
+    console.log('Error retrieving search results stauts: ' + statusText);
+    console.log('Error string: ' + errorString);
     console.log(e);
     console.dir(e);
   }
